# legesmotus

./: .gitignore  CHANGES  CMakeLists.txt  Doxyfile  Makefile  Makefile.in  NEW_MAP_FORMAT  README  README.rtf  common.mak  common.mk  configure
ai/: AI.cpp  AI.hpp  AIController.cpp  AIController.hpp  AggressiveState.cpp  AggressiveState.hpp  CMakeLists.txt  DefensiveState.cpp  DefensiveState.hpp  FuzzyCategory.cpp  FuzzyCategory.hpp  FuzzyEnvironment.cpp  FuzzyEnvironment.hpp  FuzzyLogic.cpp  FuzzyLogic.hpp  FuzzyLogicAI.cpp  FuzzyLogicAI.hpp  FuzzyLogicFSM.cpp  FuzzyLogicFSM.hpp  FuzzyLogicState.cpp  FuzzyLogicState.hpp  Makefile  MapGrapher.cpp  MapGrapher.hpp  Pathfinder.cpp  Pathfinder.hpp  ReactiveAIController.cpp  ReactiveAIController.hpp  SeekingState.cpp  SeekingState.hpp  SparseIntersectMap.cpp  SparseIntersectMap.hpp  StateTranslator.cpp  StateTranslator.hpp  fuzzyaimain.cpp  main.cpp
client/: ArbitraryMenu.cpp  ArbitraryMenu.hpp  AreaGun.cpp  AreaGun.hpp  BaseMapObject.cpp  BaseMapObject.hpp  CMakeLists.txt  ChargeGun.cpp  ChargeGun.hpp  ChatLog.cpp  ChatLog.hpp  Client.cpp  Client.hpp  ClientConfiguration.cpp  ClientConfiguration.hpp  ClientGate.cpp  ClientGate.hpp  ClientMap.cpp  ClientMap.hpp  ClientNetwork.cpp  ClientNetwork.hpp  ClientSDL.cpp  ClientSDL.hpp  Controller.cpp  Controller.hpp  ConvolveKernel.cpp  ConvolveKernel.hpp  Curve.cpp  Curve.hpp  Decoration.cpp  Decoration.hpp  Font.cpp  Font.hpp  ForceField.cpp  ForceField.hpp  Form.cpp  Form.hpp  FormItem.cpp  FormItem.hpp  FreezeGun.cpp  (+99 more)
common/: AckManager.cpp  AckManager.hpp  AreaGun.cpp  AreaGun.hpp  CMakeLists.txt  Circle.cpp  Circle.hpp  ClientMapObject.cpp  ClientMapObject.hpp  ClientWeapon.cpp  ClientWeapon.hpp  CommonNetwork.cpp  CommonNetwork.hpp  CommonSDL.cpp  CommonSDL.hpp  ConfigManager.cpp  ConfigManager.hpp  Configuration.cpp  Configuration.hpp  Decoration.cpp  Decoration.hpp  Exception.cpp  Exception.hpp  FiniteStateMachine.cpp  FiniteStateMachine.hpp  ForceField.cpp  ForceField.hpp  GameLogic.cpp  GameLogic.hpp  GameParameters.cpp  GameParameters.hpp  Gate.cpp  Gate.hpp  IPAddress.cpp  IPAddress.hpp  Iterator.cpp  Iterator.hpp  LMException.cpp  LMException.hpp  LMPolygon.cpp  (+80 more)
config/: ai.ini  gui.ini
gui/: BackgroundFrame.cpp  BackgroundFrame.hpp  Bindings.cpp  Bindings.hpp  Bone.cpp  Bone.hpp  Button.cpp  Button.hpp  CMakeLists.txt  ConvolveKernel.cpp  ConvolveKernel.hpp  DrawContext.cpp  DrawContext.hpp  Font.cpp  Font.hpp  GLESContext.cpp  GLESContext.hpp  GLESProgram.cpp  GLESProgram.hpp  GameView.cpp  GameView.hpp  Graphic.cpp  Graphic.hpp  GraphicContainer.cpp  GraphicContainer.hpp  GraphicRegion.cpp  GraphicRegion.hpp  GraphicalGate.cpp  GraphicalGate.hpp  GraphicalMap.cpp  GraphicalMap.hpp  GraphicalMapObject.cpp  GraphicalMapObject.hpp  GraphicalPlayer.cpp  GraphicalPlayer.hpp  GraphicalWeapon.cpp  GraphicalWeapon.hpp  GuiClient.cpp  GuiClient.hpp  GuiWindow.cpp  (+61 more)
mac/: install.applescript  install.sh  polish_dmg.applescript  prepare_framework.sh
metaserver/: CMakeLists.txt  Makefile  MetaServer.cpp  MetaServer.hpp  main.cpp
newclient/: Client.cpp  Client.hpp  ClientNetwork.cpp  ClientNetwork.hpp  Controller.cpp  Controller.hpp  GameLogic.cpp  GameLogic.hpp  Makefile
server/: CMakeLists.txt  ClassicMode.cpp  ClassicMode.hpp  DeathmatchMode.cpp  DeathmatchMode.hpp  GameModeHelper.cpp  GameModeHelper.hpp  GateStatus.cpp  GateStatus.hpp  Info.plist  Makefile  Server.cpp  Server.hpp  ServerConfig.cpp  ServerConfig.hpp  ServerMap.cpp  ServerMap.hpp  ServerNetwork.cpp  ServerNetwork.hpp  ServerPlayer.cpp  ServerPlayer.hpp  ServerSDL.cpp  ServerSDL.hpp  Spawnpoint.cpp  Spawnpoint.hpp  ZombieMode.cpp  ZombieMode.hpp  lmserver.xib  main.cpp
serverscanner/: CMakeLists.txt  JsonGenerator.cpp  JsonGenerator.hpp  Makefile  OutputGenerator.cpp  OutputGenerator.hpp  ReadableGenerator.cpp  ReadableGenerator.hpp  ServerList.cpp  ServerList.hpp  ServerScanner.cpp  ServerScanner.hpp  ServerScannerNetwork.cpp  ServerScannerNetwork.hpp  main.cpp
src/: CMakeLists.txt
src/client/: ArbitraryMenu.hpp  BaseMapObject.cpp  BaseMapObject.hpp  CMakeLists.txt  ChatLog.cpp  ClientConfiguration.cpp  ClientConfiguration.hpp  ClientGate.hpp  ClientNetwork.cpp  ClientNetwork.hpp  ClientSDL.cpp  ClientSDL.hpp  ConvolveKernel.cpp  ConvolveKernel.hpp  Curve.hpp  Decoration.cpp  Font.cpp  Font.hpp  ForceField.hpp  Form.cpp  Form.hpp  GameController.cpp  GameController.hpp  GameWindow.cpp  Graphic.cpp  Graphic.hpp  GraphicGroup.hpp  GraphicMenuItem.cpp  GraphicMenuItem.hpp  GraphicalMap.hpp  GraphicsCache.cpp  Hazard.cpp  Hazard.hpp  ImpactCannon.cpp  ImpactCannon.hpp  ListMenuItem.hpp  MapReceiver.hpp  Mask.cpp  Mask.hpp  Menu.cpp  (+35 more)
src/client/legesmotus.nib/: info.nib  keyedobjects.nib
src/common/: AckManager.cpp  AckManager.hpp  CMakeLists.txt  Circle.cpp  CommonNetwork.cpp  CommonNetwork.hpp  ConfigManager.hpp  Exception.cpp  Exception.hpp  GameParameters.cpp  IPAddress.cpp  IPAddress.hpp  Map.cpp  Map.hpp  MapReader.cpp  PacketHeader.hpp  PacketQueue.hpp  PacketReader.hpp  PathManager.cpp  Player.cpp  Player.hpp  Point.cpp  Point.hpp  Shape.cpp  Shape.hpp  StringTokenizer.cpp  StringTokenizer.hpp  UDPPacket.cpp  UDPPacket.hpp  UDPSocket.hpp  Version.hpp  WeaponFile.cpp  WeaponReader.cpp  WeaponReader.hpp  misc.cpp  network.cpp  team.cpp  timer.cpp  timer.hpp
src/metaserver/: MetaServer.cpp  MetaServer.hpp  main.cpp
src/server/: ClassicMode.cpp  ClassicMode.hpp  GameModeHelper.cpp  GateStatus.hpp  ServerConfig.hpp  ServerMap.cpp  ServerMap.hpp  ServerNetwork.cpp  ServerNetwork.hpp  ServerPlayer.cpp  ServerPlayer.hpp  Spawnpoint.cpp  Spawnpoint.hpp  ZombieMode.cpp  main.cpp
src/serverscanner/: ServerScannerNetwork.cpp  main.cpp
src/tests/: config_test.cpp  radial_menu.cpp  simple_menu.cpp  simple_sprite.cpp  simple_text.cpp  simple_transition.cpp
tests/: Makefile  client_network.cpp  config_test.cpp  radial_menu.cpp  simple_menu.cpp  simple_scroll.cpp  simple_sprite.cpp  simple_text.cpp  simple_transition.cpp  test_background_frame.cpp  test_blend.cpp  test_drawmodes.cpp  test_gameview.cpp  (+14 more)
(+35 files in other folders)
